Initial project setup.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-*.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.settings
+target
+.classpath
+.project
+.springBeans
+.tern-project
+*.log
+*.iml
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+bin
+build
+.gradle
+.idea
