--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 
+spring.profiles.active=prod
+
 logging.level.org.springframework=INFO
 logging.level.com.sivalabs=DEBUG
 
-spring.profiles.active=prod
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialize=true
+
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=auth
+jwt.route.authentication.refresh=refresh
